--- a/index.html
+++ b/index.html
@@ -2,10 +2,13 @@
 <head>
   <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
-<script src="js/script.js" type="text/javascript"></script>
+
 
 
 <body>
+
+  <center><h1>Virgin committee presents:</h1></center>
+  <center><h2>Virgin-Verse</h2></center>
 
      <!-- Slideshow container -->
 <div class="slideshow-container">
@@ -13,25 +16,20 @@
   <!-- Full-width images with number and caption text -->
   <div class="mySlides fade">
 
-    <img src="img/img1.jpg" style="width:100%">
+    <img src="img/img1.jpg">
+    <div class="text"></div>
+  </div>
+
+
+  <div class="mySlides fade">
+
+    <img src="img/img3.jpg">
     <div class="text"></div>
   </div>
 
   <div class="mySlides fade">
 
-    <img src="img/img2.jpg" style="width:50%">
-    <div class="text"></div>
-  </div>
-
-  <div class="mySlides fade">
-
-    <img src="img/img3.jpg" style="width:100%">
-    <div class="text"></div>
-  </div>
-
-  <div class="mySlides fade">
-
-    <img src="img/img4.jpg" style="width:100%">
+    <img src="img/img4.jpg">
     <div class="text"></div>
   </div>
 
@@ -46,7 +44,10 @@
   <span class="dot" onclick="currentSlide(1)"></span>
   <span class="dot" onclick="currentSlide(2)"></span>
   <span class="dot" onclick="currentSlide(3)"></span>
-  <span class="dot" onclick="currentSlide(4)"></span>
-</div> 
+
+</div>
+
+
+<footer><script src="js/script.js" type="text/javascript"></script></footer>
 </body>
 </html>
